<resources>
    <string name="app_name">login</string>
    <string name="login">login</string>
    <string name="input_your_data">Input your data:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remind">Remind</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="welcome">Welcome</string>
    <string name="user">User</string>
    <string name="sign_out">Sign out</string>
    <string name="invalid_data">Invalid data</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="save">Save</string>
    <string name="show_data">Show data</string>
    <string name="name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="form">Form</string>
</resources>